--- a/aws-instance-first-script/Jenkinsfile
+++ b/aws-instance-first-script/Jenkinsfile
@@ -51,9 +51,9 @@ pipeline {
            }
        }
 
-        stage('Destroy') {
+        stage('Apply') {
             steps {
-                sh "pwd;cd terraform/aws-instance-first-script ; terraform destroy -input=false tfplan"
+                sh "pwd;cd terraform/aws-instance-first-script ; terraform apply -input=false tfplan"
             }
         }
     }
